mobile wrap issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -182,4 +182,8 @@
     .nomobile {
       display: none;
     }
+    h3 {
+      font-size: 12px;
+      white-space: nowrap;
+    }
   }
